# Library-Rental-System-Cpp

./: CMakeLists.txt  README.md  mainTest.cpp
headers/: book.hpp  fileManager.hpp  magicBox.hpp  magicBoxStub.hpp  randomClass.hpp  shelf.hpp
src/: book.cpp  fileManager.cpp  magicBox.cpp  randomClass.cpp  shelf.cpp
tests/: book-ut.cpp  fileManager-ut.cpp  magicBox-ut.cpp  mainTest.cpp  randomClass-ut.cpp  shelf-ut.cpp
